fix(brew): fix formula file name for action

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -12,5 +12,7 @@ jobs:
     with:
       publish: |
         {
-          "brew": true
+          "brew": {
+            "formula_file": "zsh-spaceship.rb"
+          }
         }
